Add a route with a list of all cached requests (#22)
