# handlers/GetAdventurerSearch.go
@@ -18,7 +18,8 @@ func GetAdventurerSearch(w http.ResponseWriter, r *http.Request) {
 	page := validators.ValidatePageQueryParam(r.URL.Query()["page"])
 	query, queryOk := validators.ValidateAdventurerNameQueryParam(r.URL.Query()["query"])
 	region, regionOk := validators.ValidateRegionQueryParam(r.URL.Query()["region"])
-	searchType := validators.ValidateSearchTypeQueryParam(r.URL.Query()["searchType"])
+	searchTypeQueryParam := r.URL.Query()["searchType"]
+	searchType := validators.ValidateSearchTypeQueryParam(searchTypeQueryParam)
 
 	if !queryOk || !regionOk {
 		giveBadRequestResponse(w)
@@ -33,7 +34,7 @@ func GetAdventurerSearch(w http.ResponseWriter, r *http.Request) {
 	query = strings.ToLower(query)
 
 	// Look for cached data, then run the scraper if needed
-	data, status, date, expires, found := profileSearchCache.GetRecord([]string{region, query, fmt.Sprint(searchType), fmt.Sprint(page)})
+	data, status, date, expires, found := profileSearchCache.GetRecord([]string{region, query, searchTypeQueryParam[0], fmt.Sprint(page)})
 	if !found {
 		data, status = scrapers.ScrapeAdventurerSearch(region, query, searchType, page)
 
@@ -46,7 +47,7 @@ func GetAdventurerSearch(w http.ResponseWriter, r *http.Request) {
 			return
 		}
 
-		date, expires = profileSearchCache.AddRecord([]string{region, query, fmt.Sprint(searchType), fmt.Sprint(page)}, data, status)
+		date, expires = profileSearchCache.AddRecord([]string{region, query, searchTypeQueryParam[0], fmt.Sprint(page)}, data, status)
 	}
 
 	w.Header().Set("Date", date)
